src/test/deca/context/invalid/cmp-icompatible-2.context
cmp-icompatible-2.deca:2:
